--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>@alexnderbodnar</p>
+    <div>
+        <p>@alexnderbodnar</p>
+        <div class="links-div">
+            <div class="box-1">
+                <a href="https://www.facebook.com/alexnderbodnar/" target="_self" class="underline-animation">Facebook</a>
+            </div>
+            <div class="box-2">
+                <a href="https://www.linkedin.com/in/alexander-bodnarr/" target="_self" class="underline-animation">LinkedIn</a>
+            </div>
+            <div class="box-3">
+                <a href="https://open.spotify.com/user/alexanderbodnar2016" target="_self" class="underline-animation">Spotify</a>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
