added fade-in animation

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@1,200&display=swap" rel="stylesheet">
+    <script src="js/script.js"></script>
 </head>
 <body>
-    <div>
+    <div class="fade-in">
         <p>@alexnderbodnar</p>
         <div class="links-div">
             <div class="box-1">
